--- a/portfolio.html
+++ b/portfolio.html
@@ -45,9 +45,11 @@
           </div>
           <img src="20230112_163655_resized (1).jpg" alt="image"  height="250"/>
           <p>
+            <marquee direction="left">
            <b>I am RAVI MALVIYA </b>  ,I am 20 year old, BTech student studing in <b> sagar institute of science technology & research ,bhopal. </b>
             I really enjoy solving problems as well as making things pretty and easy to use. I can't stop learning new
             things; the more, the better.
+            </marquee>
           </p>
           <div class="work-arrow">
             <p>
